[Lalith] Updated Swagger File
